crates/tome/tests/snapshots/cli__doctor_clean.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Checking library...
  ok library OK
Checking targets...
Checking config...
  ok config OK

No issues found.
