crates/tome/tests/snapshots/cli__list_json_two_skills.snap
---
source: crates/tome/tests/cli.rs
expression: redacted
---
[
  {
    "name": "alpha-skill",
    "path": "[TMPDIR]",
    "source": "test-src"
  },
  {
    "name": "beta-skill",
    "path": "[TMPDIR]",
    "source": "test-src"
  }
]
