crates/tome/tests/snapshots/cli__list_table_two_skills.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
 SKILL         SOURCE   PATH
 my-skill      test     [TMPDIR]/skills/my-skill
 other-skill   test     [TMPDIR]/skills/other-skill

2 skill(s) total
