crates/tome/tests/snapshots/cli__status_empty_library.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Library: [TMPDIR]/library
  0 skills consolidated

Sources:
  (none configured)

Targets:
  (none configured)

Health: All good
