crates/tome/tests/snapshots/cli__status_unconfigured.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Not configured yet. Run `tome init` to get started.
