crates/tome/tests/snapshots/cli__sync_force_recreate.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Sync complete
  Library: 0 created, 0 unchanged, 1 updated
