crates/tome/tests/snapshots/cli__sync_idempotent_second_run.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Sync complete
  Library: 0 created, 1 unchanged, 0 updated
