crates/tome/tests/snapshots/cli__sync_initial_two_skills.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Sync complete
  Library: 2 created, 0 unchanged, 0 updated
