crates/tome/tests/snapshots/cli__sync_updates_changed.snap
---
source: crates/tome/tests/cli.rs
expression: stdout
---
Library changes detected:
Sync complete
  Library: 0 created, 0 unchanged, 1 updated
